# hoom

./: .gitignore  README.md  cabal.project  flake.nix  hoom.cabal  stack.yaml
.github/workflows/: hs-ci.yml  nix-ci.yml
exe/: Main.hs
src/: Hoom.hs
src/Hoom/: Core.hs  Networking.hs  Player.hs
